Fix layout bugs

--- a/styles/global.css
+++ b/styles/global.css
@@ -111,7 +111,7 @@ button.outlined {
   background-color: transparent;
 }
 
-input {
+input:not(.plain) {
   height: 1rem;
   padding: var(--s-4) var(--s-3);
   background-color: var(--bg-lighter);
@@ -122,18 +122,18 @@ input {
   border: 1px solid var(--border);
 }
 
-input:focus-within {
+input:not(.plain):focus-within {
   outline: 2px solid var(--theme);
   border-color: transparent;
 }
 
-input::placeholder {
+input:not(.plain)::placeholder {
   color: var(--text-lighter);
   letter-spacing: 0.5px;
   font-weight: var(--semi-bold);
 }
 
-input.error {
+input:not(.plain).error {
   outline: 2px solid var(--theme-error);
   border-color: transparent;
 }
